--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.0",
+    "sass": "^1.69.6",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.4.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.9"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.4.47"
   }
 }
