--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
-    "pinia": "^2.1.7"
+    "lodash": "^4.17.21",
+    "maska": "^2.1.10",
+    "moment": "^2.30.1",
+    "pinia": "^2.1.7",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
